--- a/etc/fixtures/initial-seed/annotations-config.json
+++ b/etc/fixtures/initial-seed/annotations-config.json
@@ -1,5 +1,14 @@
 [
   {
+    "data_set": "Entrez Gene Id",
+    "data_source": "HPO",
+    "genomic_unit_type": "gene",
+    "annotation_source_type": "http",
+    "url": "https://hpo.jax.org/api/hpo/search/?q={gene}&max=-1&offset=0&category=genes",
+    "query_param": "",
+    "attribute": ".genes[] | select( .entrezGeneSymbol | contains('{gene}')) |  { entrezGeneId: .entrezGeneId }"
+  },
+  {
    "data_set": "Gene Summary",
    "data_source": "RefSeq",
    "genomic_unit_type": "gene",
@@ -13,9 +22,12 @@
   },
   {
     "data_set": "HPO",
-    "data_source": "???",
+    "data_source": "HPO",
     "genomic_unit_type": "gene",
-    "annotation_source_type": "none"
+    "annotation_source_type": "http",
+    "url": "https://hpo.jax.org/api/hpo/gene/{Entrez Gene Id}",
+    "query_param": "",
+    "dependencies": ["Entrez Gene Id"]
   },
   {
     "data_set": "Protein Expression Overview",
@@ -59,7 +71,7 @@
     "genomic_unit_type": "hgvs_variant",
     "transcript": true,
     "annotation_source_type": "http",
-    "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
+    "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
     "query_param": "refseq=1;",
     "attribute": ".[].transcript_consequences[] | { transcript_id: .transcript_id }"
    },
@@ -69,7 +81,7 @@
      "genomic_unit_type": "hgvs_variant",
      "transcript": true,
      "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
+     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
      "query_param": "refseq=1;",
      "attribute": ".[].transcript_consequences[] | { polyphen_prediction: .polyphen_prediction, transcript_id: .transcript_id }"
    },
@@ -79,7 +91,7 @@
      "genomic_unit_type": "hgvs_variant",
      "transcript": true,
      "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
+     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
      "query_param": "refseq=1;",
      "attribute": ".[].transcript_consequences[] | { polyphen_score: .polyphen_score, transcript_id: .transcript_id }"
    },
@@ -89,7 +101,7 @@
      "genomic_unit_type": "hgvs_variant",
      "transcript": true,
      "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
+     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
      "query_param": "refseq=1;",
      "attribute": ".[].transcript_consequences[] | { sift_prediction: .sift_prediction, transcript_id: .transcript_id }"
    },
@@ -99,7 +111,7 @@
      "genomic_unit_type": "hgvs_variant",
      "transcript": true,
      "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
+     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
      "query_param": "refseq=1;",
      "attribute": ".[].transcript_consequences[] | { sift_score: .sift_score, transcript_id: .transcript_id }"
    },
@@ -109,7 +121,7 @@
      "genomic_unit_type": "hgvs_variant",
      "transcript": true,
      "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
+     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
      "query_param": "refseq=1;",
      "attributes": "transcript_consequences[].{cds_start}{used_ref}>{variant_allele}"
    },
@@ -120,26 +132,14 @@
      "annotation_source_type": "none"
    },
    {
-     "data_set": "Consequence",
+     "data_set": "Consequences",
      "data_source": "Ensembl",
      "genomic_unit_type": "hgvs_variant",
      "transcript": true,
      "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json",
+     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
      "query_param": "refseq=1;",
      "attribute": ".[].transcript_consequences[] | { consequence_terms: .consequence_terms, transcript_id: .transcript_id }"
-   },
-   {
-     "data_set": "Effects",
-     "data_source": "???",
-     "genomic_unit_type": "hgvs_variant",
-     "annotation_source_type": "none"
-   },
-   {
-     "data_set": "Affected Regions",
-     "data_source": "???",
-     "genomic_unit_type": "hgvs_variant",
-     "annotation_source_type": "none"
    },
    {
     "data_set": "ClinVar",
@@ -176,7 +176,7 @@
     "data_source": "Ensembl",
     "genomic_unit_type": "hgvs_variant",
     "annotation_source_type": "http",
-    "url": "http://grch37.rest.ensembl.org/variant_recoder/human/{hgvs_variant}?content-type=application/json",
+    "url": "http://grch37.rest.ensembl.org/variant_recoder/human/{hgvs_variant}?content-type=application/json;",
     "query_param": "refseq=1;",
     "attribute-tmp": "{alt_allele}.id - Want to keep this here, but this data source isn't supported yet"
   }
