--- a/etc/fixtures/initial-seed/annotations-config.json
+++ b/etc/fixtures/initial-seed/annotations-config.json
@@ -5,20 +5,7 @@
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
     "url": "https://hpo.jax.org/api/hpo/search/?q={gene}&max=-1&offset=0&category=genes",
-    "query_param": "",
-    "attribute": ".genes[] | select( .entrezGeneSymbol | contains('{gene}')) |  { entrezGeneId: .entrezGeneId }"
-  },
-  {
-   "data_set": "Gene Summary",
-   "data_source": "RefSeq",
-   "genomic_unit_type": "gene",
-   "annotation_source_type": "none"
-  },
-  {
-    "data_set": "OMIM",
-    "data_source": "OMIM",
-    "genomic_unit_type": "gene",
-    "annotation_source_type": "none"
+    "attribute": ".genes[] | select( .entrezGeneSymbol | contains(\"{gene}\")) |  { entrezGeneId: .entrezGeneId }"
   },
   {
     "data_set": "HPO",
@@ -26,158 +13,6 @@
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
     "url": "https://hpo.jax.org/api/hpo/gene/{Entrez Gene Id}",
-    "query_param": "",
     "dependencies": ["Entrez Gene Id"]
-  },
-  {
-    "data_set": "Protein Expression Overview",
-    "data_source": "Aliance Genome",
-    "genomic_unit_type": "gene",
-    "annotation_source_type": "none"
-  },
-  {
-    "data_set": "Model Systems - Rat",
-    "data_source": "Aliance Genome",
-    "genomic_unit_type": "gene",
-    "annotation_source_type": "none"
-  },
-  {
-    "data_set": "Model Systems - Mouse",
-    "data_source": "Aliance Genome",
-    "genomic_unit_type": "gene",
-    "annotation_source_type": "none"
-  },
-  {
-    "data_set": "Modelability",
-    "data_source": "Aliance Genome",
-    "genomic_unit_type": "gene",
-    "annotation_source_type": "none"
-  },
-  {
-    "data_set": "Human Gene Expression Profile",
-    "data_source": "gTex",
-    "genomic_unit_type": "gene",
-    "annotation_source_type": "none"
-  },
-  {
-    "data_set": "Druggability",
-    "data_source": "Pharos",
-    "genomic_unit_type": "gene",
-    "annotation_source_type": "none"
-  },
-  {
-    "data_set": "transcript_id",
-    "data_source": "Ensembl",
-    "genomic_unit_type": "hgvs_variant",
-    "transcript": true,
-    "annotation_source_type": "http",
-    "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
-    "query_param": "refseq=1;",
-    "attribute": ".[].transcript_consequences[] | { transcript_id: .transcript_id }"
-   },
-   {
-     "data_set": "Polyphen Prediction",
-     "data_source": "Ensembl",
-     "genomic_unit_type": "hgvs_variant",
-     "transcript": true,
-     "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
-     "query_param": "refseq=1;",
-     "attribute": ".[].transcript_consequences[] | { polyphen_prediction: .polyphen_prediction, transcript_id: .transcript_id }"
-   },
-   {
-     "data_set": "Polyphen Score",
-     "data_source": "Ensembl",
-     "genomic_unit_type": "hgvs_variant",
-     "transcript": true,
-     "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
-     "query_param": "refseq=1;",
-     "attribute": ".[].transcript_consequences[] | { polyphen_score: .polyphen_score, transcript_id: .transcript_id }"
-   },
-   {
-     "data_set": "SIFT Prediction",
-     "data_source": "Ensembl",
-     "genomic_unit_type": "hgvs_variant",
-     "transcript": true,
-     "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
-     "query_param": "refseq=1;",
-     "attribute": ".[].transcript_consequences[] | { sift_prediction: .sift_prediction, transcript_id: .transcript_id }"
-   },
-   {
-     "data_set": "SIFT Score",
-     "data_source": "Ensembl",
-     "genomic_unit_type": "hgvs_variant",
-     "transcript": true,
-     "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
-     "query_param": "refseq=1;",
-     "attribute": ".[].transcript_consequences[] | { sift_score: .sift_score, transcript_id: .transcript_id }"
-   },
-   {
-     "data_set": "cDNA Change",
-     "data_source": "Ensembl",
-     "genomic_unit_type": "hgvs_variant",
-     "transcript": true,
-     "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
-     "query_param": "refseq=1;",
-     "attributes": "transcript_consequences[].{cds_start}{used_ref}>{variant_allele}"
-   },
-   {
-     "data_set": "AA Change",
-     "data_source": "Ensembl",
-     "genomic_unit_type": "hgvs_variant",
-     "annotation_source_type": "none"
-   },
-   {
-     "data_set": "Consequences",
-     "data_source": "Ensembl",
-     "genomic_unit_type": "hgvs_variant",
-     "transcript": true,
-     "annotation_source_type": "http",
-     "url": "http://grch37.rest.ensembl.org/vep/human/hgvs/{hgvs_variant}?content-type=application/json;",
-     "query_param": "refseq=1;",
-     "attribute": ".[].transcript_consequences[] | { consequence_terms: .consequence_terms, transcript_id: .transcript_id }"
-   },
-   {
-    "data_set": "ClinVar",
-    "data_source": "ClinVar",
-    "genomic_unit_type": "variant",
-    "annotation_source_type": "none"
-  },
-  {
-    "data_set": "CADD",
-    "data_source": "???",
-    "genomic_unit_type": "variant",
-    "annotation_source_type": "none"
-  },
-  {
-    "data_set": "GERP",
-    "data_source": "GERP",
-    "genomic_unit_type": "variant",
-    "annotation_source_type": "none"
-  },
-  {
-    "data_set": "Phylop100",
-    "data_source": "Phylop100",
-    "genomic_unit_type": "variant",
-    "annotation_source_type": "none"
-  },
-  {
-    "data_set": "Mappability",
-    "data_source": "???",
-    "genomic_unit_type": "variant",
-    "annotation_source_type": "none"
-  },
-  {
-    "data_set": "RS ID",
-    "data_source": "Ensembl",
-    "genomic_unit_type": "hgvs_variant",
-    "annotation_source_type": "http",
-    "url": "http://grch37.rest.ensembl.org/variant_recoder/human/{hgvs_variant}?content-type=application/json;",
-    "query_param": "refseq=1;",
-    "attribute-tmp": "{alt_allele}.id - Want to keep this here, but this data source isn't supported yet"
   }
 ]
