--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-regular-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@rollup/plugin-strip": "^2.1.0",
     "@vueform/multiselect": "^2.3.1",
     "vue": "3.2.25",
     "vue-router": "4"
