Fixed the naming for the repositories passed in by the database depedency.  They are now consistent and more clearly indicate that they are not objects that are direclty mongo collections, but are a wrapper to the mongo collections.

--- a/backend/.coveragerc
+++ b/backend/.coveragerc
@@ -2,4 +2,7 @@
 [run]
 omit = 
        src/main.py
+       src/dependencies.py
+       src/database.py
        src/routers/*
+       src/models/user.py
