Settings Via the Environment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,4 +12,5 @@ WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
 COPY ./src /app/src
+COPY etc/entrypoint-init.sh /app/entrypoint-init.sh
 ENTRYPOINT ["/bin/sh", "-c", "uvicorn src.main:app --host 0.0.0.0 --port 8000 --log-level info"]
