--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -23,7 +23,10 @@ services:
       - rosalution-network
       - traefik
     environment:
-      MONGODB_HOST: "rosalution-db"
+      - MONGODB_HOST="rosalution-db"
+    entrypoint: ['/bin/sh', '-c', './entrypoint-init.sh']
+    secrets:
+      - rosalution_key
     deploy:
       labels:
         - "traefik.enable=true"
@@ -40,4 +43,8 @@ networks:
     name: rosalution-network-prod
   traefik:
     name: traefik-public
+    external: true
+
+secrets:
+  rosalution_key:
     external: true
