--- a/docker-compose.local-production.yml
+++ b/docker-compose.local-production.yml
@@ -46,7 +46,8 @@ services:
     networks:
       - rosalution-network
     environment:
-      MONGODB_HOST: "rosalution-db"
+      - MONGODB_HOST="rosalution-db"
+    entrypoint: ['/bin/sh', '-c', './entrypoint-init.sh']
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=rosalution-network"
