--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -23,7 +23,7 @@ services:
       - rosalution-network
       - traefik
     environment:
-      - MONGODB_HOST="rosalution-db"
+      - MONGODB_HOST=rosalution-db
     entrypoint: ['/bin/sh', '-c', './entrypoint-init.sh']
     deploy:
       labels:
