Changed the document cookie delimiter to get ;space not just ;, added a test for when multiple cookies exist in the browser and we can extract rosalution token properly, lastly added the CAS login env var for production docker compose

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -24,6 +24,7 @@ services:
       - traefik
     environment:
       - MONGODB_HOST=rosalution-db
+      - CAS_LOGIN_ENABLE=True
     entrypoint: ['/bin/sh', '-c', './entrypoint-init.sh']
     deploy:
       labels:
