--- a/.github/workflows/github-actions-static-analysis.yml
+++ b/.github/workflows/github-actions-static-analysis.yml
@@ -30,11 +30,11 @@ jobs:
       run: |
         while read -r file;
         do
-          docker run --rm -v "$PWD:/mnt" koalaman/shellcheck:stable --format=gcc "$file"
+          docker run --rm -v "$PWD:/mnt" koalaman/shellcheck:v0.9.0 --format=gcc "$file"
         done < <(find . -type f ! -path "*node_modules/*" ! -path "*local/*" ! -path "*lib/*" ! -path "./.git/*" -name "*.sh" -print)
     - name: Markdown linting with markdownlint-cli
       run: |
         while read -r file;
         do
-         docker run -v $PWD:/workdir ghcr.io/igorshubovych/markdownlint-cli:latest --config $MARKDOWNLINT_CONFIG "$file"
+          docker run -v $PWD:/workdir ghcr.io/igorshubovych/markdownlint-cli:v0.32.2 --config $MARKDOWNLINT_CONFIG "$file"
         done < <(find . -type f ! -path "**/node_modules/*" ! -path "*local/*" ! -path "*lib/*" ! -path "**/.git/*" -name "*.md" -print)
