--- a/.github/workflows/github-actions-static-analysis.yml
+++ b/.github/workflows/github-actions-static-analysis.yml
@@ -4,6 +4,9 @@ on: [push, workflow_dispatch]
 
 env:
   MARKDOWNLINT_CONFIG: etc/static-analysis/markdownlint.json
+  HADOLINT_DOCKER: hadolint/hadolint:v2.8.0
+  SHELLCHECK_DOCKER: koalaman/shellcheck:v0.9.0
+  MARKDOWN_DOCKER: ghcr.io/igorshubovych/markdownlint-cli:v0.32.2
 
 jobs:
   build:
@@ -17,24 +20,24 @@ jobs:
     - uses: actions/checkout@v3
     - name: Pulling Docker containers
       run: |
-        docker pull hadolint/hadolint:v2.8.0
-        docker pull koalaman/shellcheck:v0.9.0
-        docker pull ghcr.io/igorshubovych/markdownlint-cli:v0.32.2
+        docker pull $HADOLINT_DOCKER
+        docker pull $SHELLCHECK_DOCKER
+        docker pull $MARKDOWN_DOCKER
     - name: Dockerfile linting with Hadolint
       run: |
         while read -r file;
         do
-          docker run --rm -i hadolint/hadolint:v2.8.0 < "$file"
+          docker run --rm -i $HADOLINT_DOCKER < "$file"
         done < <(find . -type f ! -path "*/node_modules/*" -name "Dockerfile" -print)
     - name: Shellscript linting with ShellCheck
       run: |
         while read -r file;
         do
-          docker run --rm -v "$PWD:/mnt" koalaman/shellcheck:v0.9.0 --format=gcc "$file"
+          docker run --rm -v "$PWD:/mnt" $SHELLCHECK_DOCKER --format=gcc "$file"
         done < <(find . -type f ! -path "*node_modules/*" ! -path "*local/*" ! -path "*lib/*" ! -path "./.git/*" -name "*.sh" -print)
     - name: Markdown linting with markdownlint-cli
       run: |
         while read -r file;
         do
-          docker run -v $PWD:/workdir ghcr.io/igorshubovych/markdownlint-cli:v0.32.2 --config $MARKDOWNLINT_CONFIG "$file"
+          docker run -v $PWD:/workdir $MARKDOWN_DOCKER --config $MARKDOWNLINT_CONFIG "$file"
         done < <(find . -type f ! -path "**/node_modules/*" ! -path "*local/*" ! -path "*lib/*" ! -path "**/.git/*" -name "*.md" -print)
