Adding a working directory to run everything within the frontned

--- a/.github/workflows/github-actions-nodejs.yml
+++ b/.github/workflows/github-actions-nodejs.yml
@@ -8,9 +8,13 @@ on: [push, workflow_dispatch]
 
 
 jobs:
-  build:
+  javascript-ci:
 
     runs-on: ubuntu-latest
+  
+    defaults:
+      run:
+        working-directory: frontend
 
     strategy:
       matrix:
