--- a/.github/workflows/github-actions-python-package.yml
+++ b/.github/workflows/github-actions-python-package.yml
@@ -18,6 +18,10 @@ jobs:
       matrix:
         python-version: ["3.8"]
 
+    defaults:
+      run:
+        working-directory: ./backend
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -25,20 +29,16 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      working-directory: ./backend
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with Pylint
-      working-directory: ./backend
       run: |
         # Stop the build if there are Python linting errors
         pylint --rcfile $PYLINT_CONFIG src tests
     - name: Unit test with pytest
-      working-directory: ./backend
       run: |
         pytest --cov=src --cov-fail-under=80 --cov-branch --cov-report=term tests/unit/
     - name: Integration test with pytest
-      working-directory: ./backend
       run: |
         pytest -s tests/integration
