--- a/.github/workflows/github-actions-nodejs.yml
+++ b/.github/workflows/github-actions-nodejs.yml
@@ -1,25 +1,19 @@
-
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: JavaScript CI
+name: Node.js CI
 
 on: [push, workflow_dispatch]
 
+defaults:
+  run:
+    working-directory: frontend
 
 jobs:
-  javascript-ci:
+  nodejs-ci:
 
     runs-on: ubuntu-latest
-  
-    defaults:
-      run:
-        working-directory: frontend
 
     strategy:
       matrix:
         node-version: [16.2]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
