--- a/.github/workflows/github-actions-python-package.yml
+++ b/.github/workflows/github-actions-python-package.yml
@@ -1,3 +1,6 @@
+# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+
 name: python CI workflow
 
 on: [push, workflow_dispatch]
