--- a/.github/workflows/github-actions-python-package.yml
+++ b/.github/workflows/github-actions-python-package.yml
@@ -30,10 +30,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with Pylint
-      run: |
-        # Stop the build if there are Python linting errors
-        pylint --rcfile $PYLINT_CONFIG src tests
+    # - name: Lint with Pylint
+    #   run: |
+    #     # Stop the build if there are Python linting errors
+    #     pylint --rcfile $PYLINT_CONFIG src tests
     - name: Formatting with Pylint
       run: |
         yapf -r . --diff --style $YAPF_CONFIG
