--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,9 +22,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -33,6 +34,9 @@ jobs:
       run: |
         # Stop the build if there are Python linting errors
         pylint --rcfile $PYLINT_CONFIG src tests
+    - name: Formatting with Pylint
+      run: |
+        yapf -r . --diff --style $YAPF_CONFIG
     - name: Unit test with pytest
       run: |
         pytest --cov=src --cov-fail-under=80 --cov-branch --cov-report=term tests/unit/
