Added the yapf env var

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -4,6 +4,7 @@ on: [push, workflow_dispatch]
 
 env:
   PYLINT_CONFIG: .pylintrc
+  YAPF_CONFIG: .style.yapf
   ROSALUTION_KEY: not-a-real-key-but-need-to-resolve
 
 jobs:
