--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -19,3 +19,6 @@ jobs:
     - name: Building with docker-compose
       run: |
         docker-compose up --build -d
+    - name: Do we get an application heartbeat?
+      run: |
+        curl local.rosalution.cgds/rosalution/api/heart-beat
