--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -13,13 +13,8 @@ jobs:
     - name: Running the setup.sh script
       run: |
         sh setup.sh
-    - name: Checking out the etc hosts file
-      run: |
-        cat /etc/hosts
-    - name: Building with docker-compose
-      run: |
-        docker-compose up --build -d
-        curl local.rosalution.cgds/rosalution/api/heart-beat
-    - name: Stop containers
-      if: always()
-      run: docker-compose down
+    - name: Cypress tests
+      uses: cypress-io/github-action@v5
+      with:
+        start: docker-compose up --build -d
+        wait-on: 'http://local.rosalution.cgds'
