--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -2,6 +2,9 @@ name: System Tests
 
 on: [push, workflow_dispatch]
 
+env:
+  ROSALUTION_KEY: not-a-real-key-but-need-to-resolve
+
 jobs:
   system-tests:
     runs-on: ubuntu-latest
@@ -16,5 +19,8 @@ jobs:
     - name: Cypress tests
       uses: cypress-io/github-action@v5
       with:
+        working-directory: system-tests
+        browser: chrome
+        headed: false
         start: docker-compose up --build -d
         wait-on: 'http://local.rosalution.cgds'
