adding a longer timer for wait-on for Cypress

--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -24,3 +24,4 @@ jobs:
         headed: false
         start: docker-compose up --build -d
         wait-on: 'http://local.rosalution.cgds'
+        wait-on-timeout: 120
