--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -10,8 +10,7 @@ body:
 
         We are looking forward to collaborating and resolving the issue.
 
-        By following these instructions, fill every question, and do every step
-        we will be best equiped to work towards a solution. 🙏
+        By following these instructions, fill every question, and do every step we will be best equiped to work towards a solution. 🙏
   - type: checkboxes
     id: checks
     attributes:
@@ -58,8 +57,7 @@ body:
         Please provide any reproduction steps that may need to be described.
         If reproduced from a local deployment, confirm your [local environment was setup successfuly](../../README.md#getting-started).
       placeholder: |
-        * (optional) If from local development version
-          1. Verified environment setup environment with `.setup.sh` and sourced shell, then `docker-compose up`
+        * (optional) If from local development version: Verified environment setup environment with `.setup.sh` and sourced shell, then `docker-compose up`
 
         * Open the browser and call the endpoint `/`.
         * It renders an empty rosalution dashboard.
