added creating a venv to the setup script
This commit will add functionality to the script to create a virtual environment using python3 venv. The script will install all necessary dependencies into the virtual environment and run the script within the virtual environment.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ rosalution-annotation-log.txt*
 __pycache__/
 *.py[cod]
 *$py.class
+rosalution_env/
 
 # Python Unit test / coverage reports
 htmlcov/
