more changes per PR change requests

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -55,7 +55,7 @@ body:
       label: Steps to reproduce
       description: |
         Please provide any reproduction steps that may need to be described.
-        If reproduced from a local deployment, confirm your [local environment was setup successfuly](README.md#getting-started).
+        If reproduced from a local deployment, confirm your [local environment was setup successfuly](https://github.com/uab-cgds-worthey/rosalution/blob/main/README.md#getting-started).
       placeholder: |
         * (optional) If from local development version: Verified environment setup environment with `.setup.sh` and sourced shell, then `docker-compose up`
 
