--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -16,9 +16,9 @@ body:
           required: true
         - label: Check that there isn't [already an proposed enhancement](https://github.com/uab-cgds-worthey/rosalution/issues/) that accomplishes the same thing.
           required: true
-        - label: Follow our [Code of Conduct](../../CODE_OF_CONDUCT.md)
+        - label: Follow our [Code of Conduct](https://github.com/uab-cgds-worthey/rosalution/blob/main/CODE_OF_CONDUCT.md)
           required: true
-        - label: Read the [Contributing Guidelines](../../CONTRIBUTING.md).
+        - label: Read the [Contributing Guidelines](https://github.com/uab-cgds-worthey/rosalution/blob/main/CONTRIBUTING.md).
           required: true
   - type: textarea
     id: feature-description
@@ -49,7 +49,7 @@ body:
     id: terms
     attributes:
       label: Code of Conduct
-      description: By submitting this feature proposal, you agree to follow our [Code of Conduct](../../CODE_OF_CONDUCT.md)
+      description: By submitting this feature proposal, you agree to follow our [Code of Conduct](https://github.com/uab-cgds-worthey/rosalution/blob/main/CODE_OF_CONDUCT.md)
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
