As a team, decided to utilize deploying Rosalution for local development, just as we do for production with the rosalution_key to avoid complexities with setting up one's environment to contribute to the application

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - ./backend:/app
     environment:
       - MONGODB_HOST=rosalution-db
-      - ROSALUTION_KEY
+    entrypoint: ['/bin/sh', '-c', './entrypoint-init.sh']
     networks:
       - rosalution-network
     labels:
