Due to us setting a volume with docker compose for local development, we cannot rely on the file being coppied in at runtime to be available where we expect entrypoint-init.sh script.  It is located within the backend/etc/ directory however which is sufficient to move on. We willl be updated our README docs as a warning to future friends in the future to not struggle as we have.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - ./backend:/app
     environment:
       - MONGODB_HOST=rosalution-db
-    entrypoint: ['/bin/sh', '-c', './entrypoint-init.sh']
+    entrypoint: ['/bin/sh', '-c', './etc/entrypoint-init.sh']
     networks:
       - rosalution-network
     labels:
