--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "2.0.1",
     "@vitest/ui": "0.10.0",
-    "@vue/test-utils": "2.0.0-rc.18",
+    "@vue/test-utils": "2.2.7",
     "c8": "^7.11.3",
     "eslint": "^8.7.0",
     "eslint-config-google": "^0.14.0",
