--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,13 +25,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "4.0.0",
+    "@vitest/coverage-c8": "0.27.2",
     "@vitest/ui": "0.27.2",
     "@vue/test-utils": "2.2.7",
     "eslint": "^8.7.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^8.4.0",
     "happy-dom": "^2.25.1",
-    "sinon": "^13.0.1",
+    "sinon": "15.0.1",
     "vite": "4.0.4",
     "vitest": "0.27.2"
   }
