--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "eslint": "^8.7.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^8.4.0",
-    "happy-dom": "^2.25.1",
+    "happy-dom": "6.0",
     "sinon": "15.0.1",
     "vite": "4.0.4",
     "vitest": "0.27.2"
