--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "@fortawesome/free-regular-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@rollup/plugin-strip": "^2.1.0",
+    "@rollup/plugin-strip": "3.0.2",
     "vue": "3.2.45",
     "vue-router": "4.1.6"
   },
