--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,10 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-regular-svg-icons": "6.1.1",
-    "@fortawesome/free-solid-svg-icons": "6.1.1",
-    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@fortawesome/fontawesome-svg-core": "6.2.1",
+    "@fortawesome/free-regular-svg-icons": "6.2.1",
+    "@fortawesome/free-solid-svg-icons": "6.2.1",
+    "@fortawesome/vue-fontawesome": "3.0.2",
     "@rollup/plugin-strip": "3.0.2",
     "vue": "3.2.45",
     "vue-router": "4.1.6"
@@ -29,7 +29,7 @@
     "@vitest/ui": "0.27.2",
     "@vue/test-utils": "2.2.7",
     "eslint": "^8.7.0",
-    "eslint-config-google": "^0.14.0",
+    "eslint-config-google": "0.14.0",
     "eslint-plugin-vue": "^8.4.0",
     "happy-dom": "6.0",
     "sinon": "15.0.1",
