--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,9 +28,9 @@
     "@vitest/coverage-c8": "0.27.2",
     "@vitest/ui": "0.27.2",
     "@vue/test-utils": "2.2.7",
-    "eslint": "^8.7.0",
+    "eslint": "8.32.0",
     "eslint-config-google": "0.14.0",
-    "eslint-plugin-vue": "^8.4.0",
+    "eslint-plugin-vue": "9.9.0",
     "happy-dom": "6.0",
     "sinon": "15.0.1",
     "vite": "4.0.4",
