--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,10 +5,10 @@ itsdangerous==2.1.2
 pymongo==4.3.3
 jq==1.4.0
 
-python-multipart
-python-jose[cryptography]
-passlib
-bcrypt
+python-multipart==0.0.5
+python-jose[cryptography]==3.3.0
+passlib==1.7.4
+bcrypt==4.0.1
 
 # dev
 pytest-cov==4.0.0
