--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,18 @@
 fastapi==0.74.1
-uvicorn==0.17.5
-python-cas==1.5.0
+uvicorn==0.20.0
+python-cas==1.6.0
 itsdangerous==2.1.2
-pymongo==4.2.0
-jq==1.2.1
+pymongo==4.3.3
+jq==1.4.0
 
-python-multipart
-python-jose[cryptography]
-passlib
-bcrypt
+python-multipart==0.0.5
+python-jose[cryptography]==3.3.0
+passlib==1.7.4
+bcrypt==4.0.1
 
 # dev
-pytest-cov==3.0.0
-pytest==7.0.1
-pylint==2.12.2
-requests==2.26.0
+pytest-cov==4.0.0
+pytest==7.2.1
+pylint==2.15.10
+requests==2.28.2
 yapf==0.32.0
