Added an update to the entrpoint that supports it expanding all of the positional arguments from the entrypoint script to the uvicorn application for the backend service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - ./backend:/app
     environment:
       - MONGODB_HOST=rosalution-db
-    entrypoint: ['/bin/sh', '-c', './etc/entrypoint-init.sh']
+    entrypoint: ['/bin/sh', '-c', './etc/entrypoint-init.sh --reload']
     networks:
       - rosalution-network
     labels:
