Discovered that the HPO API has changed the structure of succesful search results; added unit tests to ensure the failure case is captured for extracting results; Updated configuration for new HPO API

--- a/etc/fixtures/initial-seed/annotations-config.json
+++ b/etc/fixtures/initial-seed/annotations-config.json
@@ -5,7 +5,7 @@
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
     "url": "https://hpo.jax.org/api/hpo/search/?q={gene}&max=-1&offset=0&category=genes",
-    "attribute": ".genes[] | select( .entrezGeneSymbol | contains(\"{gene}\")) |  { entrezGeneId: .entrezGeneId }"
+    "attribute": ".genes[] | select( .geneSymbol | contains(\"{gene}\")) |  { entrezGeneId: .geneId}"
   },
   {
     "data_set": "Ensembl Gene Id",
