Updated the backend script to be invoked via python to be able to pass in flags. The loginDev has been moved to a dev_router and will only appear during a development deployment, removing the code entirely in production. Tests and routes have been updated

--- a/docker-compose.local-production.yml
+++ b/docker-compose.local-production.yml
@@ -46,6 +46,7 @@ services:
     networks:
       - rosalution-network
     environment:
+      - ROSALUTION_ENV=production
       - MONGODB_HOST=rosalution-db
     entrypoint: ['/bin/sh', '-c', './entrypoint-init.sh']
     labels:
