--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -23,6 +23,7 @@ services:
       - rosalution-network
       - traefik
     environment:
+      - ROSALUTION_ENV=production
       - MONGODB_HOST=rosalution-db
       - CAS_LOGIN_ENABLE=True
     entrypoint: ['/bin/sh', '-c', './entrypoint-init.sh']
