Changed how to set the ignore for the paper.md since the JOSS pandoc format does not match our linting standard

--- a/.github/workflows/common-static-analysis.yml
+++ b/.github/workflows/common-static-analysis.yml
@@ -35,5 +35,5 @@ jobs:
       run: |
         while read -r file;
         do
-          docker run -v $PWD:/workdir $MARKDOWN_DOCKER -i paper.md --ignore --config $MARKDOWNLINT_CONFIG "$file"
-        done < <(find . -type f ! -path "**/node_modules/*" ! -path "*local/*" ! -path "*lib/*" ! -path "**/.git/*" -name "*.md" -print)
+          docker run -v $PWD:/workdir $MARKDOWN_DOCKER --ignore --config $MARKDOWNLINT_CONFIG "$file"
+        done < <(find . -type f ! -path "**/node_modules/*" ! -path "*local/*" ! -path "*lib/*" ! -path "**/.git/*" ! -path "*paper.md" -name "*.md" -print)
