Rosalution joss paper experiment (#47)
* work in progress for getting the figures to render as expected with pandoc
* Got the table working! and the figures! and the references
* Updated the Paper and restructured the markdown to be more readible in the repo
* Updating the revisions from feedback from collaborating authors.
* Changed how to set the ignore for the paper.md since the JOSS pandoc format does not match our linting standard
* removed trhe extra ignore that was missing a file that caused the failure to execute

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,9 @@ coverage.xml
 cover/
 import.json
 backend/example_file_to_upload.txt
+
+# Pandoc JOSS artifacts
+media/
+*.jats
+*.pdf
+*.crossref
