Need to include the pull_request event trigger, so that outside collaborators can have GitHub Actions get approval to run on their pull request additions into Rosalution executed.

--- a/.github/workflows/common-static-analysis.yml
+++ b/.github/workflows/common-static-analysis.yml
@@ -1,6 +1,6 @@
 name: Markdown, Docker, and Shell Static Analysis
 
-on: [push, workflow_dispatch]
+on: [push, pull_request, workflow_dispatch]
 
 env:
   MARKDOWNLINT_CONFIG: etc/static-analysis/markdownlint.json
