Apply suggestions from code review
Co-authored-by: James Scherer <jscherer@uab.edu>
Signed-off-by: Angelina Uno-Antonison <angelina.antonison@gmail.com>

--- a/.github/workflows/development-main-deployment.yml
+++ b/.github/workflows/development-main-deployment.yml
@@ -19,5 +19,5 @@ jobs:
         with:
           ref: HEAD^
 
-      - name: Deploy Production Rosalution Build to Developer DevOsp Server
+      - name: Deploy Production Rosalution Build to Developer DevOps Server
         run: sudo -E docker stack deploy --prune --with-registry-auth --compose-file docker-compose.production.yml rosalution-prod
