--- a/.github/workflows/build-and-publish-docker-images.yml
+++ b/.github/workflows/build-and-publish-docker-images.yml
@@ -5,7 +5,6 @@ on:
     branches:
     - main
 
-
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -27,4 +26,4 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Run build script
-        run: ./build.sh --tag 0.6.0 --push
+        run: ./build.sh --tag ${{ vars.VERSION_BUILD_TAG }} --push
