--- a/etc/fixtures/initial-seed/annotations-config.json
+++ b/etc/fixtures/initial-seed/annotations-config.json
@@ -132,7 +132,7 @@
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
-    "url": "https://www.alliancegenome.org/api/gene/{Rat Gene Identifier}/models",
+    "url": "https://www.alliancegenome.org/api/gene/{Rat Gene Identifier}/models?limit=100",
     "attribute": "{ \"Rat Models\": [.results[]] }",
     "dependencies": ["Rat Gene Identifier"]
   },
@@ -158,7 +158,7 @@
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
-    "url": "https://www.alliancegenome.org/api/gene/{Mouse Gene Identifier}/models",
+    "url": "https://www.alliancegenome.org/api/gene/{Mouse Gene Identifier}/models?limit=100",
     "attribute": "{ \"Mouse Models\": [.results[]] }",
     "dependencies": ["Mouse Gene Identifier"]
   },
@@ -184,7 +184,7 @@
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
-    "url": "https://www.alliancegenome.org/api/gene/{Zebrafish Gene Identifier}/models",
+    "url": "https://www.alliancegenome.org/api/gene/{Zebrafish Gene Identifier}/models?limit=100",
     "attribute": "{ \"Zebrafish Models\": [.results[]] }",
     "dependencies": ["Zebrafish Gene Identifier"]
   },
@@ -210,7 +210,7 @@
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
-    "url": "https://www.alliancegenome.org/api/gene/{C-Elegens Gene Identifier}/models",
+    "url": "https://www.alliancegenome.org/api/gene/{C-Elegens Gene Identifier}/models?limit=100",
     "attribute": "{ \"C-Elegens Models\": [.results[]] }",
     "dependencies": ["C-Elegens Gene Identifier"]
   },
